se actualizo y corrigio el codigo

--- a/Views/Producto/Delete.cshtml
+++ b/Views/Producto/Delete.cshtml
@@ -7,19 +7,19 @@
     <h4>Producto</h4>
     <dl class="row">
         <dt class="col-sm-2">Nombre</dt>
-        <dd class="col-sm-10">@Model.Nombre</dd>
+        <dd class="col-sm-10">@Model.nombre</dd>
         <dt class="col-sm-2">Descripción</dt>
-        <dd class="col-sm-10">@Model.Descripcion</dd>
+        <dd class="col-sm-10">@Model.descripcion</dd>
         <dt class="col-sm-2">Precio</dt>
-        <dd class="col-sm-10">@Model.Precio</dd>
+        <dd class="col-sm-10">@Model.precio</dd>
         <dt class="col-sm-2">Stock</dt>
-        <dd class="col-sm-10">@Model.Stock</dd>
+        <dd class="col-sm-10">@Model.stock</dd>
         <dt class="col-sm-2">Estado</dt>
-        <dd class="col-sm-10">@Model.Estado</dd>
+        <dd class="col-sm-10">@Model.estado</dd>
     </dl>
 
     <form asp-action="Delete" method="post">
-        <input type="hidden" asp-for="IdProducto" />
+        <input type="hidden" asp-for="id_producto" />
         <input type="submit" value="Eliminar" class="btn btn-danger" />
         <a asp-action="Index" class="btn btn-secondary">Cancelar</a>
     </form>
