--- a/Views/Producto/Edit.cshtml
+++ b/Views/Producto/Edit.cshtml
@@ -3,36 +3,36 @@
 <h1>Editar Producto</h1>
 
 <form asp-action="Edit" method="post">
-    <input type="hidden" asp-for="IdProducto" />
+    <input type="hidden" asp-for="id_producto" />
     <div class="form-group">
-        <label asp-for="Nombre" class="control-label"></label>
-        <input asp-for="Nombre" class="form-control" />
-        <span asp-validation-for="Nombre" class="text-danger"></span>
+        <label asp-for="nombre" class="control-label"></label>
+        <input asp-for="nombre" class="form-control" />
+        <span asp-validation-for="nombre" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <label asp-for="Descripcion" class="control-label"></label>
-        <input asp-for="Descripcion" class="form-control" />
-        <span asp-validation-for="Descripcion" class="text-danger"></span>
+        <label asp-for="descripcion" class="control-label"></label>
+        <input asp-for="descripcion" class="form-control" />
+        <span asp-validation-for="descripcion" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <label asp-for="Precio" class="control-label"></label>
-        <input asp-for="Precio" class="form-control" />
-        <span asp-validation-for="Precio" class="text-danger"></span>
+        <label asp-for="precio" class="control-label"></label>
+        <input asp-for="precio" class="form-control" />
+        <span asp-validation-for="precio" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <label asp-for="Stock" class="control-label"></label>
-        <input asp-for="Stock" class="form-control" />
-        <span asp-validation-for="Stock" class="text-danger"></span>
+        <label asp-for="stock" class="control-label"></label>
+        <input asp-for="stock" class="form-control" />
+        <span asp-validation-for="stock" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <label asp-for="Estado" class="control-label"></label>
-        <input asp-for="Estado" class="form-control" />
-        <span asp-validation-for="Estado" class="text-danger"></span>
+        <label asp-for="estado" class="control-label"></label>
+        <input asp-for="estado" class="form-control" />
+        <span asp-validation-for="estado" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <label asp-for="CategoriaIdCategoria" class="control-label"></label>
-        <input asp-for="CategoriaIdCategoria" class="form-control" />
-        <span asp-validation-for="CategoriaIdCategoria" class="text-danger"></span>
+        <label asp-for="categoria_id_categoria" class="control-label"></label>
+        <input asp-for="categoria_id_categoria" class="form-control" />
+        <span asp-validation-for="categoria_id_categoria" class="text-danger"></span>
     </div>
     <div class="form-group">
         <input type="submit" value="Guardar" class="btn btn-primary" />
