--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,12 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Inicio";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="home-container">
+    <div class="home-card">
+        <h1 class="home-title">Tienda Online</h1>
+        <p class="home-subtitle">Bienvenido al Sistema de Ventas</p>
+        <p class="home-description">Gestiona productos, categorías y más desde una interfaz sencilla y poderosa.</p>
+        <a href="/Producto" class="home-button">Explorar Productos</a>
+    </div>
 </div>
