Se puede iniciar sesion

--- a/Views/Clientes/Create.cshtml
+++ b/Views/Clientes/Create.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Registro de Cliente</h2>
 
-<form asp-action="Crear" method="post">
+<form asp-action="Create" method="post">
     <div class="form-group">
         <label asp-for="nombre">Nombre</label>
         <input asp-for="nombre" class="form-control" required />
@@ -34,3 +34,7 @@
 
     <button type="submit" class="btn btn-primary mt-2">Registrarse</button>
 </form>
+
+<br>
+
+<p>¿Ya tienes cuenta? <a href="@Url.Action("Login", "Home")">Iniciar sesión</a></p>
