separar Usuario de Cliente

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,15 +2,13 @@
     ViewData["Title"] = "Inicio";
 }
 
-<!-- Sección de bienvenida con imagen de fondo -->
-<div class="container-fluid bg-dark text-white py-5" style="background-image: url('/images/senati.png'); background-size: cover; background-position: center;">
+<div class="container-fluid text-white py-5" style="background-color: #004080;">
     <div class="text-center">
         <h1 class="display-4 text-shadow">Senati Store</h1>
         <p class="lead">Productos de calidad a los mejores precios</p>
         <a href="/Producto" class="btn btn-primary btn-lg mt-3">Explorar Productos</a>
     </div>
 </div>
-
 
 <div class="container py-5 bg-light">
     <h2 class="text-center mb-4">Testimonios</h2>
