--- a/Views/Home/Login.cshtml
+++ b/Views/Home/Login.cshtml
@@ -40,7 +40,12 @@
 
                     <p class="text-center">
                         ¿No tienes cuenta?
-                        <a href="@Url.Action("Create", "Clientes")">Regístrate aquí</a>
+                        <a href="@Url.Action("Create", "Home")">Regístrate aquí</a>
+                    </p>
+
+                    <p class="text-center mt-3">
+                        <strong>¿Eres administrador?</strong>
+                        <a href="@Url.Action("LoginAdmin", "Home")" class="text-decoration-underline">Inicia sesión aquí</a>
                     </p>
                 </div>
             </div>
