--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -82,7 +82,7 @@
                             }
 
                             <li class="nav-item ms-3">
-                                <form asp-action="Logout" method="post" class="d-inline">
+                                <form asp-controller="Home" asp-action="Logout" method="post" class="d-inline">
                                     <button type="submit" class="nav-link nav-link-button btn-no-outline">Cerrar sesión</button>
                                 </form>
                             </li>
